maemo-launcher (0.22~-1) UNRELEASED; urgency=low

  * New Upstream Release.

 -- Guillem Jover <guillem.jover@nokia.com>  Wed, 21 Feb 2007 14:41:33 +0200

maemo-launcher (0.21-1) unstable; urgency=low

  * New Upstream Release.
    - Link against libstdc++, clinkc and clinkcav (add build dependencies
      on clinkc-dev and clinkc-av-dev). (Fixes: NB#47726)
    - Initialize Xft by calling its constructors (add a build dependency
      on libxft-dev). (Fixes: NB#17937)
    - Check for asprintf errors. (Fixes: NB#45396)
  * Fix chmod instance following upstream maemo-defender to defender rename.

 -- Guillem Jover <guillem.jover@nokia.com>  Wed, 29 Nov 2006 00:00:32 +0200

maemo-launcher (0.20-1) unstable; urgency=low

  * New Upstream Release.
    - Unprotect non-essential user processes from the OOM killer.
      (Fixes: NB#46702)
  * Make the hildon enabled booster link against even more libraries, so
    that we can "preload" and share them across the childs. Added to
    Build-Depends gtkhtml-dev, libosso-dev, libossomime-dev, libosso-help-dev,
    hildon-fm-dev, libhildonmenu-dev hildon-status-bar-lib-dev and
    hildon-base-lib-dev. (Fixes: NB#17937)

 -- Guillem Jover <guillem.jover@nokia.com>  Tue, 14 Nov 2006 15:50:46 +0200

maemo-launcher (0.19-1) unstable; urgency=low

  * New Upstream Release.
  * Add a maemo-launcher-dbg package. (Closes: #41746@Nokia)

 -- Guillem Jover <guillem.jover@nokia.com>  Tue, 10 Oct 2006 16:52:43 +0300

maemo-launcher (0.18-1) unstable; urgency=low

  * New Upstream Release.
    - Create a new session id for the childs. (Closes: #28627@Nokia)
    - Use new --booster option and select the gtk module.
    - Use the renamed --enable-hildon-booster instead of --extra-libs in
      configure.
    - Remove the now not required LD_BIND_NOW environment variable from
      the init script (as it's implemented using the boosters).
      (Closes: #28055@Nokia)
    - Add new maemo-summoner, to load directly .launch applications.