@@ -5,7 +5,7 @@ It was downloaded from <http://www.maemo.org/>.
 
 Copyright:
 
-    Copyright (C) 2005, 2006 Nokia Corporation
+    Copyright © 2005, 2006, 2007 Nokia Corporation
 
 Upstream Authors:
 
