@@ -1,0 +1,3 @@
+usr/bin
+usr/lib/maemo-launcher
+usr/share
